<resources>
    <string name="app_name">SAA1_0706011910003</string>
    <string name="gender">Gender</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_fname">Full Name</string>
    <string name="input_nim">NIM</string>
    <string name="text_gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="input_age">Age</string>
    <string name="input_address">Address</string>
    <string name="button_register">Register</string>
    <string name="input_name_lecturer">Name</string>
    <string name="input_expertise">Expertise</string>
    <string name="button_add_lecturer">Add Lecturer</string>
    <string name="input_course_subject">Course Subject</string>
    <string name="day">Day</string>
    <string name="text_time">Time</string>
    <string name="text_lecturer">Lecturer</string>
    <string name="button_add_course">Add Course</string>
    <string name="button_login_student">Login</string>
    <string name="saa1">SAA 1</string>
    <string name="starter">Starter</string>
    <string name="add_course">Add Course</string>
    <string name="login">Login</string>
    <string name="student_register">Student Register</string>
    <string name="add_lecturer">Add Lecturer</string>
    <string name="edit_lecturer">Edit Lecturer</string>
    <string name="lect_data">Lecturer Data</string>
    <string name="lect_list">Lecturer List</string>
    <string name="lect_detail">Lecturer Details</string>
    <string name="expertise">Expertise:</string>
    <string name="nim">Nim:</string>
    <string name="email">Email:</string>
    <string name="gender_stud">Gender:</string>
    <string name="age_stud">Age:</string>
    <string name="address_stud">Address:</string>
    <string name="stud_list">stud_list</string>
    <string name="tb_stud_data">Student Data</string>
    <string name="my_schedule">My Schedule</string>
    <string name="courses">Courses</string>
    <string name="my_account">My Account</string>
    <string name="menu_home">Home</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_settings">Account</string>
    <string name="logout">Logout</string>
    <string name="add_stud">Add Student</string>
    <string name="edit_course">Edit Course</string>
    <string name="course_list">Course List</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>

    <string-array name="times">
        <item>07:30:00</item>
        <item>08:00:00</item>
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0730">
        <item>08:00:00</item>
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0800">
        <item>08:30:00</item>
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0830">
        <item>09:00:00</item>
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0900">
        <item>09:30:00</item>
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end0930">
        <item>10:00:00</item>
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1000">
        <item>10:30:00</item>
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1030">
        <item>11:00:00</item>
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1100">
        <item>11:30:00</item>
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1130">
        <item>12:00:00</item>
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1200">
        <item>12:30:00</item>
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1230">
        <item>13:00:00</item>
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1300">
        <item>13:30:00</item>
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1330">
        <item>14:00:00</item>
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1400">
        <item>14:30:00</item>
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1430">
        <item>15:00:00</item>
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1500">
        <item>15:30:00</item>
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1530">
        <item>16:00:00</item>
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1600">
        <item>16:30:00</item>
        <item>17:00:00</item>
    </string-array>
    <string-array name="jam_end1630">
        <item>17:00:00</item>
    </string-array>

    <string-array name="lecturers">
        <item>testing</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="years_old">Years Old</string>
    <string name="day_course">Day:</string>
    <string name="time_course">Time:</string>
    <string name="course_data">Course Data</string>
    <string name="edit_account">Edit Account</string>

    <string name="fcm_key">AAAA5hMYgjQ:APA91bEobyt0cFJoy8wMfUgJoyMP46Gtn6B5A4j_W3BRICX3AGu168FeKRVthMSJBk6HPKnHg1WEDuJ1fAyuizs-fKyzqsWhcOR5mTeViIJgFona16De4FZ5fw_y8GRyd7MBPvF9A7Wv</string>
</resources>